compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test6.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn x() { let x = 1 let x = x + 1 x }"
---
----- SOURCE CODE
pub fn x() { let x = 1 let x = x + 1 x }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).

-file("project/test/my/mod.gleam", 1).
-spec x() -> integer().
x() ->
    X = 1,
X@1 = X + 1,
X@1.
