compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__tail_maybe_expr_block.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn a() {\n  let fake_tap = fn(x) { x }\n  let b = [99]\n  [\n    1,\n    2,\n    ..b\n    |> fake_tap\n  ]\n}\n"
---
----- SOURCE CODE
pub fn a() {
  let fake_tap = fn(x) { x }
  let b = [99]
  [
    1,
    2,
    ..b
    |> fake_tap
  ]
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([a/0]).

-file("project/test/my/mod.gleam", 1).
-spec a() -> list(integer()).
a() ->
    Fake_tap = fun(X) -> X end,
B = [99],
[1,
    2 |
    begin
        _pipe = B,
        Fake_tap(_pipe)
    end].
